# excerpts-extractor

./: LICENSE  README.md  extract_excerpts.py  pyproject.toml
.github/workflows/: cron_job.yml
data/: excerpts.csv
data/samples/: 1_001_08_rNgog_mngon rtogs rgyan don bsdus.xml  1_005_02_C_Gro bstan rim don bsdus.xml  3_064_05=04_112_03_dbu_ma_chen_mo_man_ngag_bsod_rdor_pa_from transkribus.xml  4_113_02 theg chen rgyud bla.xml
samples/: 1_001_11_F_C_NC_M_rNgog_rgyud bla ma don bsdus_etext.xml
tests/: conftest.py  test_extract_excerpts.py
